  - #5912, Crash on GML with xlink and no prefix (Paul Ramsey)
  - #5905, Crash on deeply nested geometries (Paul Ramsey)
  - #5909, ST_ValueCount crashes on empty table (Paul Ramsey)
  - #5917, ST_Relate becomes unresponsive (Paul Ramsey)
  - Support build under Pg19 (Paul Ramsey)
  - #5082, LRS proportions clamped to [0,1] (Pawel Ostrowski)


PostGIS 3.4.4
2024/12/22

PostgreSQL 12-17 required. GEOS 3.6+ required but GEOS 3.12+ to take advantage of all features.
Proj 6.1+ required.

* Bug Fixes *

  - [topology] Quote-protect output paths of pgtopo_export (Sandro Santilli)
  - #5785, [raster] ST_MapAlgebra segfaults when expression references
           a supernumerary rast argument (Dian M Fay)
  - #5787, [topology] Check that ST_ChangeEdgeGeom doesn't change winding of rings
           (Sandro Santilli)
  - #5795, [topology] Fix ST_NewEdgesSplit can cause invalid topology
          (Björn Harrtell)
  - #5677, Retain SRID during unary union (Paul Ramsey)
  - #5790, Non-schema qualified calls causing issue with
           materialized views (Regina Obe)

* Enhancements *

  - #5782, Improve robustness of min distance calculation (Sandro Santilli)

* Breaking Changes *

  - #5799, make ST_TileEnvelope clips envelopes to tile plane extent (Paul Ramsey)


PostGIS 3.4.3
2024/09/04

* Bug Fixes *

 - #5766, Always report invalid non-null MBR of universal face (Sandro Santilli)
 - #5709, Fix loose mbr in topology.face on ST_ChangeEdgeGeom (Sandro Santilli)
 - #5698, Fix robustness issue splitting line by vertex very close to endpoints,
          affecting topology population functions (Sandro Santilli)
 - #5649, ST_Value should return NULL on missing band (Paul Ramsey)
 - #5677, ST_Union(geom[]) should unary union single entry arrays (Paul Ramsey)
 - #5679, Remove spurious COMMIT statements from sfcgal script
          (Sandro Santilli, Loïc Bartoletti)
 - #5680, Fix populate_topology_layer with standard_conforming_strings
          set to off (Sandro Santilli)